# bmstu_des

./: README.md
module 1/bfs/: CMakeLists.txt  README.md  main.cpp
module 1/bfs-and-or/: README.md  main.py
module 1/bfs-and-or/graph/: node.py  rule.py
module 1/bfs-and-or/outputs/: graph.txt
module 1/bfs-and-or/schemas/: graph_result.gv  graph_schema.gv
module 1/bfs-and-or/search_algorithm/: searchBFS.py
module 1/bfs/data_structures/: Queue.cpp  Queue.h
module 1/bfs/graph/: Edge.h  Node.cpp  Node.h  graph_to_dot.cpp  graph_to_dot.h
module 1/bfs/outputs/: graph1.txt  graph1_error.txt  graph1_same.txt
module 1/bfs/schemas/: graph1_result.gv  graph21_result.gv  graph2_result.gv  graph3_result.gv
module 1/bfs/search_algorithms/: GraphBFS.cpp  GraphBFS.h
module 1/dfs/: CMakeLists.txt  README.md  main.cpp
module 1/dfs/data_structures/: Stack.cpp  Stack.h
module 1/dfs/graph/: Edge.cpp  Edge.h  Node.h  graph_to_dot.cpp  graph_to_dot.h
module 1/dfs/outputs/: graph1.txt  graph1_error.txt  graph1_same.txt
module 1/dfs/schemas/: graph21_result.gv  graph2_result.gv  graph_error.gv  graph_same_result.gv
module 1/dfs/search_algorithms/: GraphDFS.cpp  GraphDFS.h
module 1/dfs/shemas/: graph1_result.gv
